--- a/public/index.html
+++ b/public/index.html
@@ -152,33 +152,6 @@
       color: #0056b3;
     }
 
-    #reaction-picker {
-      position: absolute;
-      bottom: 60px;
-      background: #ffffff;
-      border: 1px solid #ccc;
-      padding: 12px;
-      display: none;
-      border-radius: 12px;
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-      z-index: 1000;
-      animation: fadeIn 0.3s ease-out;
-    }
-
-    #reaction-picker button {
-      background: none;
-      border: none;
-      font-size: 26px;
-      color: #007bff;
-      cursor: pointer;
-      margin-right: 10px;
-      transition: color 0.3s ease;
-    }
-
-    #reaction-picker button:hover {
-      color: #0056b3;
-    }
-
     @keyframes fadeIn {
       0% {
         opacity: 0;
@@ -237,11 +210,8 @@
       <button onclick="document.getElementById('file-input').click()">📎</button>
       <input type="text" id="message" placeholder="Type a message...">
       <button onclick="sendMessage()">Send</button>
-      <button id="quick-reaction-btn" onclick="toggleReactionPicker()">😊</button>
+      <button id="quick-reaction-btn" onclick="sendQuickReaction()">😊</button>
     </div>
-
-    <!-- Reaction Picker -->
-    <div id="reaction-picker"></div>
   </div>
 
   <script src="/socket.io/socket.io.js"></script>
@@ -288,12 +258,6 @@
         messageElement.innerHTML = `<strong>${msg.user}:</strong> ${msg.text || msg.reaction || ''} <span class="timestamp">${formattedTime}</span>`;
       }
 
-      // Add quick reaction button
-      const reactionBtn = document.createElement('button');
-      reactionBtn.textContent = '😊';
-      reactionBtn.onclick = () => sendQuickReaction();  // Send reaction as message
-      messageElement.appendChild(reactionBtn);
-
       messagesDiv.appendChild(messageElement);
       messagesDiv.scrollTop = messagesDiv.scrollHeight;
     }
@@ -321,7 +285,7 @@
 
     socket.on('file message', displayMessage);
 
-    // Send selected quick reaction emoji as a regular message
+    // Directly send quick reaction emoji as a regular message
     function sendQuickReaction() {
       const selectedReaction = quickReactions[0]; // Get the first emoji from the list for now
       socket.emit('chat message', { text: selectedReaction, user: username });
@@ -346,17 +310,6 @@
     function changeTheme() {
       const theme = document.getElementById('theme-select').value;
       document.body.style.backgroundColor = theme === 'dark' ? '#333' : '#f5f7fb';
-    }
-
-    function toggleReactionPicker() {
-      const picker = document.getElementById('reaction-picker');
-      picker.style.display = picker.style.display === 'block' ? 'none' : 'block';
-      quickReactions.forEach(reaction => {
-        const reactionButton = document.createElement('button');
-        reactionButton.textContent = reaction;
-        reactionButton.onclick = () => sendQuickReaction(reaction);  // Send selected emoji as message
-        picker.appendChild(reactionButton);
-      });
     }
   </script>
 </body>
